MS211 erro de sinal consertado

--- a/MS211/anotacoes_MS211.tex
+++ b/MS211/anotacoes_MS211.tex
@@ -819,7 +819,7 @@
             -1 &< 0             &   3 &> 0
         \end{align*}
 
-        \[f(a) \times f(b) = 0 \rightarrow \text{Ok!}\]
+        \[f(a) \times f(b) < 0 \rightarrow \text{Ok!}\]
 
         \begin{align*}
             k &= 1          &           x_1 &= \frac{a_1 + b_1}{2}      &       b_2 &= 0,5\\
@@ -866,7 +866,7 @@
         \end{gather*}
 
         \subsubsection*{Sobre a convergência}
-        A convergência está garantida, visto que $a_i /leq x_i \leq b_i$, sendo $a_i$ crescente (não-decrescente) e $b_i$ decrescente (não-crescente).
+        A convergência está garantida, visto que $a_i \leq x_i \leq b_i$, sendo $a_i$ crescente (não-decrescente) e $b_i$ decrescente (não-crescente).
 
         Porém, ela é muito lenta: se o intervalo iniciar $a_0 - a_0 \ll \varepsilon$ e $\varepsilon$ for muito pequeno, o número de iterações tende a ser muito grande. Exemplo:
 
