--- a/MC658/anotacoes_MC658.tex
+++ b/MC658/anotacoes_MC658.tex
@@ -35,6 +35,9 @@
 %Misc
 %--------------------------------------
 \usepackage[bottom]{footmisc}
+\usepackage{amsmath}
+\usepackage{mathtools}
+\usepackage{graphicx}
 \usepackage{array}
 \usepackage{microtype}
 \usepackage{xparse}
@@ -54,9 +57,13 @@
 \definecolor{light gray}{gray}{0.8}
 \renewcommand{\arraystretch}{1.3}
 
+\renewcommand{\P}{\mathcal{P}}
+\newcommand{\NP}{\mathcal{NP}}
+\newcommand{\NPC}{\mathcal{NP}\textit{-Completo}}
 \frenchspacing
 \raggedbottom{}
 %\raggedright{}
+
 
 \begin{document}
 
@@ -85,12 +92,12 @@
 
 \end{itemize}
 
-\subsection{P, NP e NP-Completo (NPC)}
+\subsection{$\P$, $\NP$ e $\NPC$}
 
 \begin{itemize}
-    \item \textbf{P:} Classe em que os problemas que possuem algoritmos que os resolvem em tempo polinomial;
+    \item \textbf{$\P$:} Classe em que os problemas que possuem algoritmos que os resolvem em tempo polinomial;
     \item \begin{multicols}{2}
-            \textbf{NP:} Classe em que os problemas admitem um algoritmo polinomial que verifiquem instâncias do problema. \par
+            \textbf{$\NP$:} Classe em que os problemas admitem um algoritmo polinomial que verifiquem instâncias do problema. \par
             Um exemplo é o Ciclo Hamiltoniano:
             \begin{description}
                 \item\textit{Entrada:} Grafo simples $G=(V,E)$.
@@ -114,119 +121,122 @@
 
     \end{multicols}
 
-    \item \textbf{NP-Completo:} Todo problema desta classe está em NP.\@Problemas NPC têm a característica de, se algum deles admitir um algoritmo polinomial, então automaticamente todos os problemas de NP possuem um algoritmo polinomial;
+    \item \textbf{$\NPC$:} Todo problema desta classe está em NP.\@Problemas NPC têm a característica de, se algum deles admitir um algoritmo polinomial, então automaticamente todos os problemas de NP possuem um algoritmo polinomial;
     
 \end{itemize}
 
 \begin{figure}
-    \begin{subfigure}{0.5\textwidth}
-        \begin{tikzpicture}
-
-            \def\circleNPH{(0,0) circle (2.5cm)}
-            \def\circleNP{(0:3cm) circle (1.5cm)}
-            \def\circleP{(0:4cm) circle (0.5cm)}
-
-            \draw \circleNPH node[text=black, anchor=east] {NP Difícil};
-            \draw \circleNP node[text=black] {NP};
-            \draw \circleP node[anchor=east, text=black] {P};
-
-        \end{tikzpicture}
-        \caption{P $\neq$ NP}
-    \end{subfigure}
-    \begin{subfigure}{0.5\textwidth}
-        \begin{tikzpicture}
-
-            \def\circleNPH{(0,0) circle (2.5cm)}
-            \def\circleNP{(0:1cm) circle (1.5cm)}
-            \def\circleP{(0:2cm) circle (0.5cm)}
-
-            \draw \circleNPH node[text=black, anchor=east] {NP Difícil};
-            \draw \circleNP node[text=black] {NP};
-            \draw \circleP node[anchor=east, text=black] {P};
-
-        \end{tikzpicture}
-        \caption{P = NP}
-    \end{subfigure}
-    \caption*{$\textrm{P} \leq \textrm{NP | NP} \in \textrm{P}$ é uma questão em aberto. Desde 1970 até hoje um importante problema aberto é se $P=NP$.}
+    \centering
+    \includegraphics[width=0.7\textwidth]{imgs/P_np_np-complete_np-hard.png}
+    \caption*{\centering{$\P \leq \NP~|~\NP \in \P$ é uma questão em aberto. Desde 1970 até hoje um importante problema aberto é se $\P = \NP$.}}
+    
 \end{figure}
-
-\paragraph{Desde 1970} até hoje um problema importante é se P$=$NP
-
-
 \subsection{Problemas de Decisão}
+Resposta deve ser de \textbf{Sim (1)} ou \textbf{Não (0)}.
 
-Resposta deve ser de Sim (1) ou Não (0).\\
-Exemplo:\\
-Da versão de decisão do problema do menor caminho em um grafo:
-\textit{Entrada:} $G= (V,E)$ com pesos nas arestas, valor k, e uv E V
-\textit{Pergunta:} Existe caminho u->v com custo <= k?\\
+\paragraph{Exemplo:} Da versão de decisão do problema do menor caminho em um grafo:
+\begin{description}
+    \item \textit{Entrada:} $G= (V,E)$ com pesos nas arestas, valor $k$, e $u,v \in V$
+    \item \textit{Pergunta:} Existe caminho $u \to v$ com custo $\leq k$?
+\end{description}
+
+
 \subsubsection{Formalização matemática de um problema}
 \begin{itemize}
     \item Um problema será definido como um lingagem sobre um alfabeto $\Sigma$;
     \item Usaremos $\Sigma = {0,1}$ (binário);
     \item Dado um problema $Q$, qualquer instância desse problema será codificada como uma string de $0$s e $1$s;
-    \item Uma linguagem $L$ de $\Sigma$ é um conjunto de strings formadas com os símbolos de $\Sigma$.\\
-        Notação:\\
+    \item Uma linguagem \underline{$L$} de $\Sigma$ é um \underline{conjunto de strings} formadas com os símbolos de $\Sigma$.\\
+        Notação:
         \begin{itemize}
-            \item E: string vazia
+            \item $E$: string vazia
             \item $\emptyset$: Uma linguagem vazia
-            \item $\Sigma^*$: Todas as possíveis strings que podem ser escritas com os símbolos de $\Sigma$. Exemplo:\\
-                $\Sigma^* = \{E, 0, 1, 00, 01, \ldots\}$
-            
+            \item $\Sigma^*$: Todas as possíveis strings que podem ser escritas com os símbolos de $\Sigma$.\\
+                Exemplo: $\Sigma^* = \{E, 0, 1, 00, 01,~\ldots\}$
         \end{itemize}
-        \textit{Observação:} Qualquer lingaguem L é tal que L contem em $\Sigma^*$.
-        \textit{Observação:} Qualquer lingaguem L é tal que L contem em $\Sigma^*$.
+    \paragraph{Observação:} Qualquer lingaguem $L$ é tal que $L$ contem em $\Sigma^*$.
 \end{itemize}
 
-Um problema de decisão $Q$ será visto como uma linguagem que contém todas as strings de $\Sigma^*$ que corresponde às instâncias de $Q$ cuja resposta é sim.\\
+Um problema de decisão $Q$ será visto como uma linguagem que contém todas as strings de $\Sigma^*$ que corresponde às instâncias de $Q$ cuja resposta é sim.
 
-Exemplo: Ciclo-Hamiltoniano = \{ $<G = (V, E)>$ tal que G possui um Ciclo Hamiltoniano\}\\
-<> : Notação que corresponde à codificação da instância como uma string.
+Exemplo:
+\begin{description}
+    \item Ciclo-Hamiltoniano = \{ $\langle G = (V, E)\rangle$ tal que $G$ possui um Ciclo Hamiltoniano\}
+    \item $\langle~\rangle$: Notação que corresponde à codificação da instância como uma string.
+\end{description}
 
 \subsubsection{Operações sobre Linguagens}
-União $L_1\cup L_2 = \{ s t.q. s \in L_1 ou s \in L_2\}$
-Concatenação $L_1\L_2 = \{ xy t.q. x \in L_1 ou y \in L_2\}$
-União $L_1 \and L_2 = \{ s t.q. s \in L_1 ou s \in L_2\}$
+\begin{itemize}
+    \item \textbf{União:} $L_1\cup L_2 = \{ s : s \in L_1 \textrm{ ou } s \in L_2\}$
+    \item \textbf{Concatenação:} $L_1L_2 = \{ x, y : x \in L_1 \textrm{ ou } y \in L_2\}$
+    \item \textbf{União:} $L_1 \cap L_2 = \{ s : s \in L_1 \textrm{ ou } s \in L_2\}$
+\end{itemize}
 
 \subsection{Algoritmos}
 \begin{itemize}
     \item Uma entrada para um algoritmo $A$ é qualquer string de $\Sigma^*$;
     \item Um algoritmo aceita $s\in\Sigma^*$ se $A(s)=1$;
     \item Um algoritmo rejeita $s\in\Sigma^*$ se $A(s)=0$;
-    \item Um algoritmo aceita uma linguagem $L$ se $\forall s \in L \rightarrow A(s)=1$\\
-        Para strings $s \notin L A(s) \neq 1$ o algoritmo pode não parar --- entra em loop infinito)\\
-    \item Um algoritmo que decide uma linguagem $L$ se $\forall s \in L \rightarrow A(s) = 1$\\
-        $\forall s \notin L \rightarrow A(s) = 0$
-    \item Uma linguagem é aceita em tempo polinomial se existe um algoritmo polinomial $A$ que aceita $L$;\\\item Uma linguagem é decidida em tempo polinomial 
-    \item Uma linguagem é decidida em tempo polinomial se existe um algoritmo polinomial que decide $L$;
+    \item Um algoritmo aceita uma linguagem $L$ se $\forall s \in L \Rightarrow A(s)=1$.
+        Para strings $s \notin L \Rightarrow A(s) \neq 1$ o algoritmo pode não parar --- entra em loop infinito;
+    \item $A$ é um algoritmo que decide uma linguagem $L$ se 
+        $\begin{cases}
+            \forall s \in L \Rightarrow A(s) = 1\\
+            \forall s \notin L \Rightarrow A(s) = 0
+        \end{cases}$
+    \item Uma linguagem é \textbf{aceita} em tempo polinomial se existe um algoritmo polinomial $A$ que \textbf{aceita} $L$;
+    \item Uma linguagem é \textbf{decidida} em tempo polinomial se existe um algoritmo polinomial que \textbf{decide} $L$;
 
 \end{itemize}
 
-    \subsection{Definição da classe P}
+    \subsection{Definição da classe $\P$}
 
-        \[P = \{ L \in \Sigma^* \textrm{t.q.} L \textrm{é decidido em tempo polinomial} \}\]
-        Teorema: P é o conjunto de todas as linguagens decididas em tempo polinomial.\\
-        P = {L contido em sigma * tal que L é aceita em tempo polinomial} = P'\\
-        Prova:\\
-        Contido: Seja L decidida em tempo polinomial \rightarrow~um algoritmo $A$ polinomial que decide $L$ \rightarrow~$A$ aceita $L$ em tempo polinomial\\
-        Contrário de conntido: Seja $L$ aceita em tempo polinomial \arrowright~Existe um algoritmo $A$ que para todo s pertencente a L $A(s) = 1$ em tempo $c\times|s|^k$ (polinomial) onde $c$ e $k$ são constantes.\\
-        Existe um algoritmo $A'$ que simula $A$ por $c\times|s|^k$ passos e que se $A(s)=1$ então $A'(s)$ devolve 1 e caso $A$(s) não responda nada (ou zero) então $A'(s)$ devolve $0$ \rightarrow $L$ é decidida em tempo polinomial.
+        \[\P = \{ L \in \Sigma^*~|~L \textrm{ é decidido em tempo polinomial} \}\]
+
+        \paragraph{Teorema:} $\P$ é o conjunto de todas as linguagens decididas em tempo polinomial.
+        \[\P = L \in \Sigma^*~|~L \textrm{ é aceita em tempo polinomial} = \P'\]
+
+        \paragraph{Prova:}
+        \begin{description}
+            \item \textbf{Contido:}
+                \begin{description}
+                    \centering{
+                    \item Seja $L$ decidida em tempo polinomial $\Rightarrow$
+                    \item $\Rightarrow$ $\exists$ um algoritmo $A$ polinomial que decide $L$ $\Rightarrow$
+                    \item $\Rightarrow$ $A$ aceita $L$ em tempo polinomial;
+                    }
+ 
+                \end{description}
+            \item\textbf{Contrário de contido:}
+                \begin{description}
+                    \centering{
+                    \item Seja $L$ aceita em tempo polinomial $\Rightarrow$
+                    \item $\Rightarrow$ $\exists$ um algoritmo $A : s \in L~|~A(s) = 1$ em tempo $c\times|s|^k$ (polinomial) onde $c$ e $k$ são constantes;
+                    }
+
+            \end{description}
+    \end{description}
+
+        Existe um algoritmo $A'$ que simula $A$ por $c\times|s|^k$ passos. Se $A(s)=1$, então $A'(s) = 1$ e caso $A(s)$ não responda nada (ou zero) então $A'(s) = 0$ $\Rightarrow$  $L$ é decidida em tempo polinomial.
 
         %==============================================================================
 
-        Problema de Decisão
+        \paragraph{Problema de Decisão:}
+        \begin{align*}
+            \Sigma &= \{0,1\}\\
+            \Sigma^*&=\{E, 0, 1, 00, 01, \ldots\}
+        \end{align*}
 
-        \[\Sigma = \{0,1\}\]
-        \[\Sigma^*=\{E, 0, 1, 00, 01, \ldots\}\]
+        Problema $Q \subseteq \Sigma^*~|~x \in Q \iff$ a resposta para instância $x$ é sim.
 
-        Problema $\subseteq \Sigma^* / x \in$ Problema se e somente se a resposta para instância x é sim
+        Algoritmo $A$ que decide uma linguagem $L \subseteq \Sigma^*$:
+        
+        \[A(x) = \begin{cases}
+            1,~\forall x \in L\\
+            0,~\forall x \notin L
+        \end{cases}\]
+        \[P = \{L \subseteq \Sigma^*~|~\exists \textrm{ um algoritmo } A \textrm{ que decide } L \textrm{ em tempo polinomial}\}\]
 
-        Algoritmo A que decide uma linguagem L $\subset \Sigma^*$
-
-        \[A(x) = 1  \forall x \in L\]
-        \[A(x) = 0  \forall x \notin L\]
-
-        $P = \{L \subseteq \Sigma^*$ tal que existe um algoritmo A que decide L em tempo polinomial\}
 
         \subsection{Verificação}
 
@@ -237,7 +247,7 @@ União $L_1 \and L_2 = \{ s t.q. s \in L_1 ou s \in L_2\}$
 
         \begin{enumerate}
             \item Se $x \in L$ então $\exists y \in \Sigma^* / A(x,y) = 1$
-            \item Se $x \notint L$ então $\forall y \in \Sigma^*  / A(x,y) \neq 1$
+            \item Se $x \notin L$ então $\forall y \in \Sigma^*  / A(x,y) \neq 1$
         \end{enumerate}
 
         \subsection{Algoritmo Verificador para Ciclo Hamiltoniano}
